<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/howto"
            style="@style/onboard_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/howto" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/howto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/onboard_phone"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:id="@+id/relativeMain2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:orientation="vertical"
            android:layout_marginTop="70dp"
            >

            <TextView
                android:id="@+id/pickuptorder_tv"
                style="@style/onboard_bottomstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickuptorder"
                android:layout_marginTop="@dimen/commonSpace"
                android:textAlignment="center"
                android:layout_gravity="center"/>

            <TextView
                style="@style/onboard_description_style"
                android:layout_marginRight="@dimen/commonSpace"
                android:layout_marginLeft="@dimen/commonSpace"
                android:gravity="center"
                android:text="@string/pickuptorder_desc"
                android:textAlignment="inherit" />

        </LinearLayout>



    </RelativeLayout>

</RelativeLayout>