<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/concierge_heading"
        android:fontFamily="fonts/ProximaNova-Regular.otf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/commonMargin5"
        android:layout_marginTop="@dimen/commonSpace"
        android:textAlignment="center"
        android:layout_marginLeft="@dimen/commonMargin5"
        android:layout_marginRight="@dimen/commonMargin5"
        android:textColor="@color/pressbox"
        android:text="@string/concierge_order_heading"
        android:textSize="@dimen/toolbar_title"
        android:textAllCaps="false"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/concierge_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="fonts/ProximaNova-Bold.otf"
        android:padding="@dimen/commonMargin5"
        android:layout_marginTop="@dimen/commonMargin5"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/pressbox"
        android:layout_marginLeft="@dimen/commonMargin5"
        android:layout_marginRight="@dimen/commonMargin5"
        android:textSize="@dimen/toolbar_title" />

    <TextView
        android:id="@+id/concierge_invalid_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/commonMargin5"
        android:layout_marginRight="@dimen/commonMargin5"
        android:layout_marginTop="@dimen/commonMargin5"
        android:fontFamily="fonts/ProximaNova-Light.otf"
        android:padding="@dimen/commonMargin5"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:text="@string/concierge_order_address_incorret"
        android:textColor="@color/pressbox"
        android:textSize="@dimen/toolbar_title"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/concierge_place_order_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/commonMargin5"
        android:layout_marginRight="@dimen/commonMargin5"
        android:layout_marginTop="@dimen/commonMargin5"
        android:fontFamily="fonts/ProximaNova-Light.otf"
        android:padding="@dimen/commonMargin5"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/pressbox"
        android:text="@string/concierge_order_content"
        android:textSize="@dimen/toolbar_title"
        android:textStyle="italic" />


</LinearLayout>